--- a/app/src/main/resources/messages.properties
+++ b/app/src/main/resources/messages.properties
@@ -11,7 +11,7 @@ fin.financialAccount.notCorrectDocumentNumber=??/ ?? ????? ??? ???? ??? ???? ???
 fin.financialConfig.existAccountStructure=???? ??? ????? ?? ??? ?????? ???? ?????? ??? ??? ???.
 fin.financialDepartmentLedger.insertDepartmentNumber=???? ????? ????? ???? ??? ??? ?? ???? ??????.
 fin.financialDepartmentLedger.departmentLedgerExist=??? ??? ???? ????? ???? ??? ????? ???? ??? ??? ???.
-fin.financialDepartmentLedger.notExistDepartmentLedger=???? ???? ????? ?? ???? ???? ???.
+fin.financialDepartmentLedger.notExistDepartmentLedger=??? ????? ???? ???.
 fin.financialDepartmentLedger.usedDepartmentLedger=?? ??? ???? ???? ? ???? ? ?? ????? ???? ??????? ??? ???.
 fin.financialDepartmentLedger.notPossibleDeleteDepartmentLedger=????? ??? ???? ???? ???? ??? ???? ???? ?????.
 fin.financialDepartmentLedger.notExistDepartmentNumber=????? ????? ???? ??? ????? ??? ????.
@@ -29,14 +29,14 @@ fin.financialDocument.notExistDocumentItem=????? ???? ???.
 fin.financialDocument.notExistCentricAccountType=??? ?? ????? ???? ? ???? ????? ????.
 fin.financialDocument.notExistDocumentNumberInOrgan=????? ??? ???? ??? ?? ????? ???? ?????.
 fin.financialDocument.noSelectDocumentNumber=????? ??? ?????? ????.
-fin.financialDocument.noSelectDocumentItem=???? ?????? ????.
+fin.financialDocument.noSelectDocumentItem=??? ????? ?????? ????.
 fin.financialDocument.insertDocumentItem=???? ?? ???? ???? ????.
 fin.financialDocument.documentStatusCreat=????? ??? ???? ????? ????.
 fin.financialDocumentType.notEditDocument=??? ??? ???? ?????? ????.
 fin.financialLedgerType.insertCodingType=????? ?????? ??? ?? ???? ??????.
 fin.financialLedgerType.numberingType=????? ????? ????? ?????? ??? ?? ???? ??????.
 fin.financialLedgerType.notValidCodingType=????? ?????? ???? ??? ????? ??? ????.
-fin.financialLedgerType.existNumberingTypeInDepartment=??? ????? ?????? ???? ??? ??? ???? ????? ???? ??? ??? ???.
+fin.financialLedgerType.existNumberingTypeInDepartment=?? ????? ?????? ???? ??? ??? ???? ????? ???? ??? ??? ???.
 fin.financialLedgerType.notValidNumberingType=????? ??? ????? ?????? ???? ??? ????? ??? ????.
 fin.financialNumberingFormat.existNumberingFormat=??? ?? ??? ???? ??? ??? ???.
 fin.ledgerNumberingType.insertLedgerType=????  ????? ??? ???? ???? ??? ?? ???? ??????.
